# SAMpy

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
SAMpy/: an_SAM.py  oifits.py  red_SAM.py
sampy/: __init__.py  analysis.py  calibration.py  mask.py  oi.py  reduction.py  utils.py
sampy/fitting/: __init__.py  grid.py  mcmc.py
